# vtb_mortech_ai_sobes

./: .gitignore  README.md  p.txt  start_all.bat  start_frontend.bat  test_client.html  test_create_interview.py
avatar/: README.md  bot.py  newserver.py  server.py
backend/: interviews.db  main.py  pyproject.toml  requirements.txt
backend/app/: database.py  models.py
backend/app/routers/: chat.py  interviews.py  speech.py
backend/app/services/: chat_service.py  interview_service.py  transcript_service.py  whisper_service.py
backend/transcripts/: interview_1_ce860de1_20250906_224050.json  interview_1_ce860de1_20250906_224050.txt  interview_1_ce860de1_20250906_224052.json  interview_1_ce860de1_20250906_224052.txt  interview_1_ce860de1_20250906_224112.json  interview_1_ce860de1_20250906_224112.txt  interview_2_174b40cf_20250907_120938.json  interview_2_174b40cf_20250907_120938.txt  interview_2_71da9a01_20250907_141646.json  interview_2_71da9a01_20250907_141646.txt  interview_3_632c3662_20250907_121120.json  interview_3_632c3662_20250907_121120.txt  interview_3_632c3662_20250907_121206.json  interview_3_632c3662_20250907_121206.txt  interview_3_c35ae993_20250907_152702.json  interview_3_c35ae993_20250907_152702.txt  interview_5_53d7ae76_20250907_135122.json  interview_5_53d7ae76_20250907_135122.txt  interview_5_7af4cf6e_20250907_174319.json  interview_5_7af4cf6e_20250907_174319.txt  interview_90_78290d74_20250908_221657.json  interview_90_78290d74_20250908_221657.txt  interview_99_09aeab61_20250908_224248.json  interview_99_09aeab61_20250908_224248.txt
(+24 files in other folders)
