[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "fastapi==0.115.13",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "pyyaml==6.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "sqlmodel==0.0.24",
    "starlette==0.46.2",
    "typing-extensions==4.15.0",
    "uuid==1.30",
    "uvicorn[standard]==0.30.6",
    "watchfiles==1.1.0",
    "websockets==13.1",
]
